[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain-anthropic>=0.3.22",
    "langchain-core>=0.3.86",
    "langchain-mistralai>=0.2.12",
    "langgraph>=0.6.11",
    "python-dotenv>=1.2.1",
]
